[package]
name = "ws-server-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4.5.1" 
actix-web-actors="4.3.0"
actix = "0.13.3"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
redis = { version = "0.24.0", features = ["tokio-comp"] }
env_logger = "0.11.2"
dotenv = "0.15.0"
actix-cors = "0.7.0"
actix-files = "0.6.5"
tokio = { version = "1", features = ["full"] }
